--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.raunaqsawhney.contakts"
-    android:versionCode="17"
-    android:versionName="1.40" >
+    android:versionCode="18"
+    android:versionName="1.41" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -36,7 +36,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.TransparencyDemo" >
-        
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyA7RNfy7Y3qBAS7aTfOiGNqOzaLlkCPKD4" />
@@ -46,7 +45,7 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
-        
+
         <activity
             android:name="com.raunaqsawhney.contakts.MainActivity"
             android:label="@string/app_name"
@@ -55,7 +54,6 @@
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.ContactDetailActivity"
             android:label="@string/title_activity_contact_detail"
@@ -67,16 +65,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raunaqsawhney.contakts.MainActivity" />
         </activity>
-
         <activity
             android:name="com.facebook.LoginActivity"
             android:screenOrientation="portrait" />
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FavActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-        
         <activity
             android:name="com.raunaqsawhney.contakts.GoogleActivity"
             android:label="@string/app_name"
@@ -85,7 +80,6 @@
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FBActivity"
             android:label="@string/app_name"
@@ -95,7 +89,6 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FriendDetailActivity"
             android:label=""
@@ -107,7 +100,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raunaqsawhney.contakts.FBActivity" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.LoginActivity"
             android:label="@string/app_name"
@@ -122,7 +114,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raunaqsawhney.contakts.MainActivity" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.WelcomeActivity"
             android:label="@string/app_name"
@@ -133,39 +124,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FrequentActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.GraphActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.InfoActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.DialerActivity"
             android:label="@string/title_activity_dialer"
             android:screenOrientation="portrait" >
         </activity>
-        
-        <activity android:name="com.google.android.gms.ads.AdActivity"
-             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
             android:name="com.raunaqsawhney.contakts.FBSearchActivity"
             android:label="@string/app_name" >
         </activity>
-        
+        <activity
+            android:name="com.raunaqsawhney.contakts.FBMapActivity"
+            android:label="@string/title_activity_fbmap" >
+        </activity>
     </application>
 
 </manifest>
