--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,6 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.vending.BILLING" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
     
 
     <permission
@@ -143,7 +142,7 @@
         </activity>
         <activity
             android:name="com.raunaqsawhney.contakts.DialerActivity"
-            android:label="@string/title_activity_dialer"
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
         <activity
