--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -15,7 +16,6 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.vending.BILLING" />
-    
     <uses-permission android:name="com.raunaqsawhney.contakts.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -54,7 +54,6 @@
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.ContactDetailActivity"
             android:label=""
@@ -66,16 +65,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raunaqsawhney.contakts.MainActivity" />
         </activity>
-        
         <activity
             android:name="com.facebook.LoginActivity"
             android:screenOrientation="portrait" />
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FavActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-        
         <activity
             android:name="com.raunaqsawhney.contakts.GoogleActivity"
             android:label="@string/app_name"
@@ -84,7 +80,6 @@
                 android:name="com.raunaqsawhney.contakts.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FBActivity"
             android:label="@string/app_name"
@@ -94,7 +89,6 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FriendDetailActivity"
             android:label=""
@@ -106,7 +100,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raunaqsawhney.contakts.FBActivity" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.LoginActivity"
             android:label="@string/app_name"
@@ -116,59 +109,54 @@
                 android:name="com.facebook.sdk.ApplicationId"
                 android:value="@string/app_id" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.WelcomeActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FrequentActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.GraphActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
-            
-           <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.raunaqsawhney.contakts.FrequentActivity" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.raunaqsawhney.contakts.FrequentActivity" />
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.InfoActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.DialerActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FBSearchActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.raunaqsawhney.contakts.FBMapActivity"
-            android:label="">
+            android:label="" >
         </activity>
-        
+        <activity
+            android:name="com.raunaqsawhney.contakts.RecentActivity"
+            android:label="@string/title_activity_recent" >
+        </activity>
     </application>
 
 </manifest>
